[gd_scene load_steps=4 format=1]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://images/player_normal.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4, 8 )

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 34
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 8

[node name="ray_cast_near" type="RayCast2D" parent="."]

transform/pos = Vector2( 6.5, 8 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 12
type_mask = 31

[node name="ray_cast_far" type="RayCast2D" parent="."]

transform/pos = Vector2( 17.5, 8 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 12
type_mask = 31

[node name="ray_cast_hole" type="RayCast2D" parent="."]

transform/pos = Vector2( 21.5, 8 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 8
type_mask = 31

[node name="ray_cast_fall1" type="RayCast2D" parent="."]

transform/pos = Vector2( -5.5, 8 )
enabled = true
cast_to = Vector2( 0, 7 )
layer_mask = 8
type_mask = 31

[node name="ray_cast_fall2" type="RayCast2D" parent="."]

transform/pos = Vector2( 5.5, 8 )
enabled = true
cast_to = Vector2( 0, 7 )
layer_mask = 8
type_mask = 31


